syntax = "proto3";

option go_package = "gitlab.up.pt/classes/sdle/2025/t2/g01";

message Dot {
    string id = 1;
    uint32 seq = 2;
}

message DotContext {
    map<string, uint32> version_vector = 1;
    repeated Dot dots = 2;
}

message IntDotKernel {
    repeated Dot dot_keys = 1;
    repeated int64 dot_values = 2;
}

message StringDotKernel {
    repeated Dot dot_keys = 1;
    repeated string dot_values = 2;
}

message EmptyDotKernel {
    repeated Dot dot_keys = 1;
}

message CCounter {
    IntDotKernel dot_kernel = 1;
}

message StringMVReg {
    StringDotKernel dot_kernel = 1;
}

message DWFlag {
    EmptyDotKernel dot_kernel = 1;
}
